<resources>
    <string name="app_name">Books App</string>
    <string name="main_book_title">Title</string>
    <string name="main_book_author">Author</string>
    <string name="main_book_add_book">Add Book</string>
    <string name="book_list_item_title">Title</string>
    <string name="book_list_item_author">Author</string>
    <string name="main_no_books">No Books</string>
    <string name="book_list_item_cover">Book cover</string>
    <string name="fragment_book_add_edit_title">Add/Edit Book</string>
    <string name="fragment_book_add_edit_add_button">Add Book</string>
    <string name="fragment_book_add_edit_cancel_button">Cancel</string>
    <string name="fragment_book_details_cover">Book cover</string>
    <string name="fragment_book_details_menu_edit_book">Edit</string>
    <string name="main_book_isbn">ISBN</string>
    <string name="main_book_scan_isbn">Scan ISBN</string>
</resources>