<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.chemtrails.booksapp.ui.viewmodel.BooksViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="7dp"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/books"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="@{viewModel.books.empty ? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/book_list_item" />

        <TextView
            android:id="@+id/books_empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/main_no_books"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="@{viewModel.books.empty ? View.VISIBLE : View.GONE}" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/main_book_title"
            android:hint="@string/main_book_title"
            android:inputType="text"
            android:text="@={viewModel.title}" />

        <EditText
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/main_book_title"
            android:hint="@string/main_book_author"
            android:inputType="text"
            android:text="@={viewModel.author}" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.addBook()}"
            android:text="@string/main_book_add_book" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>